Bug 70484 - browser window would go keydead when clicking a link inside a FRAME which loaded a new document into the top-level content area.  r=saari, sr=hyatt, a=asa.